@@ -19,18 +19,6 @@ repositories {
     mavenCentral()
 }
 
-tasks.withType(JavaCompile) {
-    options.compilerArgs += '--enable-preview'
-}
-
-tasks.withType(JavaExec) {
-    jvmArgs += '--enable-preview'
-}
-
-tasks.withType(Test) {
-    jvmArgs += '--enable-preview'
-}
-
 dependencies {
     implementation project(':common')
     // spring
